Rename CoreRouter as Router

--- a/cmd/placemat-menu/public/templates/bird_core.conf
+++ b/cmd/placemat-menu/public/templates/bird_core.conf
@@ -19,7 +19,7 @@ protocol kernel {
     };
 }
 template bgp bgpcore {
-    local as {{.Network.ASNCoreRouter}};
+    local as {{.Network.ASNCore}};
     bfd;
 
     ipv4 {
@@ -31,6 +31,6 @@ template bgp bgpcore {
 {{$asnSpine := .Network.ASNSpine -}}
 {{range $spineIdx, $spine :=  .Spines -}}
 protocol bgp '{{$spine.Name}}' from bgpcore {
-    neighbor {{$spine.CoreRouterAddress.IP}} as {{$asnSpine}};
+    neighbor {{$spine.CoreAddress.IP}} as {{$asnSpine}};
 }
 {{end -}}
