--- a/cmd/placemat-menu/public/templates/bird_spine.conf
+++ b/cmd/placemat-menu/public/templates/bird_spine.conf
@@ -40,16 +40,16 @@ protocol static myroutes {
         table outertab;
     };
     # LoadBalancer
-    route {{.Args.Network.Exposed.LoadBalancer}} via {{(index .Args.CoreRouter.SpineAddresses $spineIdx).IP}};
+    route {{.Args.Network.Exposed.LoadBalancer}} via {{(index .Args.Core.SpineAddresses $spineIdx).IP}};
     # Bastion
-    route {{.Args.Network.Exposed.Bastion}} via {{(index .Args.CoreRouter.SpineAddresses $spineIdx).IP}};
+    route {{.Args.Network.Exposed.Bastion}} via {{(index .Args.Core.SpineAddresses $spineIdx).IP}};
     # Ingress
-    route {{.Args.Network.Exposed.Ingress}} via {{(index .Args.CoreRouter.SpineAddresses $spineIdx).IP}};
+    route {{.Args.Network.Exposed.Ingress}} via {{(index .Args.Core.SpineAddresses $spineIdx).IP}};
 }
 
 protocol bgp 'core' {
     local as {{.Args.Network.ASNSpine}};
-    neighbor {{(index .Args.CoreRouter.SpineAddresses $spineIdx).IP}} as {{.Args.Network.ASNCoreRouter}};
+    neighbor {{(index .Args.Core.SpineAddresses $spineIdx).IP}} as {{.Args.Network.ASNCore}};
     bfd;
 
     ipv4 {
