--- a/cmd/placemat-menu/public/templates/bird_vm.conf
+++ b/cmd/placemat-menu/public/templates/bird_vm.conf
@@ -38,7 +38,7 @@ template bgp bgpspine {
 {{$asnSpine := .Network.ASNSpine -}}
 {{range $spine := .Spines -}}
 protocol bgp '{{$spine.Name}}' from bgpspine {
-    neighbor {{$spine.CoreRouterAddress.IP}} as {{$asnSpine}};
+    neighbor {{$spine.CoreAddress.IP}} as {{$asnSpine}};
 }
 {{end -}}
 protocol pipe outerroutes {
