--- a/cmd/placemat-menu/public/templates/bird_vm.conf
+++ b/cmd/placemat-menu/public/templates/bird_vm.conf
@@ -25,7 +25,7 @@ protocol kernel {
     };
 }
 template bgp bgpspine {
-    local as {{.Network.ASNExtVM}};
+    local as {{.Network.ASNExternal}};
     bfd;
 
     ipv4 {
