--- a/example.yml
+++ b/example.yml
@@ -5,7 +5,7 @@ spec:
   spine-tor: 10.0.1.0
   core-spine: 10.0.2.0/31
   core-external: 10.0.3.0/24
-  core-bastion: 10.0.4.0/24
+  core-operation: 10.0.4.0/24
   node: 10.69.0.0/26
   exposed:
     loadbalancer: 10.72.32.0/20
