--- a/testdata/cluster.yml
+++ b/testdata/cluster.yml
@@ -128,7 +128,7 @@ spec:
   - name: bashrc
     file: bashrc
   - name: rkt.deb
-    file: rkt_1.30.0-1_amd64.deb
+    url: https://github.com/rkt/rkt/releases/download/v1.30.0/rkt_1.30.0-1_amd64.deb
 ---
 kind: DataFolder
 name: core-data
