remove unused docker image

--- a/cmd/placemat-menu/public/static/Makefile
+++ b/cmd/placemat-menu/public/static/Makefile
@@ -1,4 +1,4 @@
-images = cybozu-bird-2.0.aci cybozu-ubuntu-debug-18.04.aci cybozu-dnsmasq-2.79.aci
+images = cybozu-bird-2.0.aci cybozu-ubuntu-debug-18.04.aci
 operation_dir = operation
 
 default: start
@@ -8,9 +8,6 @@ cybozu-bird-2.0.aci:
 
 cybozu-ubuntu-debug-18.04.aci:
 	docker2aci docker://quay.io/cybozu/ubuntu-debug:18.04
-
-cybozu-dnsmasq-2.79.aci:
-	docker2aci docker://quay.io/cybozu/dnsmasq:2.79
 
 $(operation_dir):
 	mkdir -p $(operation_dir)
