--- a/testdata/seed_rack0-boot.yml
+++ b/testdata/seed_rack0-boot.yml
@@ -143,6 +143,12 @@ write_files:
     WantedBy=multi-user.target
 - path: /etc/ssh/sshd_config
   content: ""
+- path: /etc/neco/rack
+  content: |
+    0
+- path: /etc/neco/cluster
+  content: |
+    dev0
 runcmd:
 - - apt-get
   - -y
