get rkt image from host instead of docker2aci

--- a/cmd/placemat-menu/public/static/Makefile
+++ b/cmd/placemat-menu/public/static/Makefile
@@ -4,10 +4,12 @@ operation_dir = operation
 default: start
 
 cybozu-bird-2.0.aci:
-	docker2aci docker://quay.io/cybozu/bird:2.0
+	sudo rkt --insecure-options=image fetch docker://quay.io/cybozu/bird:2.0
+	sudo rkt image export quay.io/cybozu/bird:2.0 cybozu-bird-2.0.aci
 
 cybozu-ubuntu-debug-18.04.aci:
-	docker2aci docker://quay.io/cybozu/ubuntu-debug:18.04
+	sudo rkt --insecure-options=image fetch docker://quay.io/cybozu/ubuntu-debug:18.04
+	sudo rkt image export quay.io/cybozu/ubuntu-debug:18.04 cybozu-ubuntu-debug-18.04.aci
 
 $(operation_dir):
 	mkdir -p $(operation_dir)
