--- a/example.yml
+++ b/example.yml
@@ -22,11 +22,17 @@ spec:
     - cs: 2
       ss: 2
 ---
+kind: Image
+name: ubuntu-cloud-image
+spec:
+  url: https://cloud-images.ubuntu.com/releases/16.04/release/ubuntu-16.04-server-cloudimg-amd64-disk1.img
+---
 kind: Node
 type: boot
 spec:
   cpu: 2
   memory: 2G
+  image: ubuntu-cloud-image
 ---
 kind: Node
 type: cs
