--- a/testdata/cluster.yml
+++ b/testdata/cluster.yml
@@ -103,15 +103,9 @@ spec:
   use-nat: false
 ---
 kind: Image
-name: coreos-image
+name: ubuntu-cloud-image
 spec:
-  url: https://stable.release.core-os.net/amd64-usr/current/coreos_production_qemu_image.img.bz2
-  compression: bzip2
----
-kind: Image
-name: ubuntu-image
-spec:
-  url: https://cloud-images.ubuntu.com/releases/bionic/release/ubuntu-18.04-server-cloudimg-amd64.img
+  url: https://cloud-images.ubuntu.com/releases/16.04/release/ubuntu-16.04-server-cloudimg-amd64-disk1.img
 ---
 kind: DataFolder
 name: common-data
@@ -213,28 +207,13 @@ spec:
   - kind: image
     name: root
     spec:
-      image: ubuntu-image
+      image: ubuntu-cloud-image
       copy-on-write: true
-  - kind: vvfat
-    name: common
-    spec:
-      folder: common-data
-      copy-on-write: false
-  - kind: vvfat
-    name: local
-    spec:
-      folder: rack0-bird-data
-      copy-on-write: false
   - kind: localds
     name: seed
     spec:
       user-data: seed_rack0-boot.yml
       network-config: network.yml
-      copy-on-write: false
-  - kind: raw
-    name: data
-    spec:
-      size: 30G
       copy-on-write: false
   resources:
     cpu: "2"
@@ -284,28 +263,13 @@ spec:
   - kind: image
     name: root
     spec:
-      image: ubuntu-image
+      image: ubuntu-cloud-image
       copy-on-write: true
-  - kind: vvfat
-    name: common
-    spec:
-      folder: common-data
-      copy-on-write: false
-  - kind: vvfat
-    name: local
-    spec:
-      folder: rack1-bird-data
-      copy-on-write: false
   - kind: localds
     name: seed
     spec:
       user-data: seed_rack1-boot.yml
       network-config: network.yml
-      copy-on-write: false
-  - kind: raw
-    name: data
-    spec:
-      size: 30G
       copy-on-write: false
   resources:
     cpu: "2"
