--- a/example.yml
+++ b/example.yml
@@ -33,6 +33,7 @@ spec:
   cpu: 2
   memory: 2G
   image: ubuntu-cloud-image
+  cloud-init-template: boot-seed.yml.template
 ---
 kind: Node
 type: cs
