--- a/example.yml
+++ b/example.yml
@@ -1,12 +1,12 @@
 kind: Network
 spec:
+  ipam-config: example_ipam.json
   asn-base: 64600
   internet: 10.0.0.0/24
   spine-tor: 10.0.1.0
   core-spine: 10.0.2.0/31
   core-external: 10.0.3.0/24
   core-operation: 10.0.4.0/24
-  node: 10.69.0.0/26
   exposed:
     loadbalancer: 10.72.32.0/20
     bastion: 10.72.48.0/26
