--- a/testdata/cluster.yml
+++ b/testdata/cluster.yml
@@ -175,6 +175,11 @@ name: operation-data
 spec:
   dir: operation
 ---
+kind: DataFolder
+name: sabakan-data
+spec:
+  dir: sabakan
+---
 kind: Node
 name: rack0-boot
 spec:
@@ -191,6 +196,10 @@ spec:
     name: seed
     spec:
       user-data: seed_rack0-boot.yml
+  - kind: vvfat
+    name: sabakan
+    spec:
+      folder: sabakan-data
   resources:
     cpu: "2"
     memory: 2G
@@ -249,6 +258,10 @@ spec:
     name: seed
     spec:
       user-data: seed_rack1-boot.yml
+  - kind: vvfat
+    name: sabakan
+    spec:
+      folder: sabakan-data
   resources:
     cpu: "2"
     memory: 2G
