--- a/testdata/cluster.yml
+++ b/testdata/cluster.yml
@@ -143,13 +143,6 @@ spec:
     file: bird_rack0-tor2.conf
 ---
 kind: DataFolder
-name: rack0-bird-data
-spec:
-  files:
-  - name: bird.conf
-    file: bird_rack0-node.conf
----
-kind: DataFolder
 name: rack1-tor1-data
 spec:
   files:
@@ -162,13 +155,6 @@ spec:
   files:
   - name: bird.conf
     file: bird_rack1-tor2.conf
----
-kind: DataFolder
-name: rack1-bird-data
-spec:
-  files:
-  - name: bird.conf
-    file: bird_rack1-node.conf
 ---
 kind: DataFolder
 name: operation-data
@@ -711,7 +697,7 @@ spec:
     readonly: false
   apps:
   - name: ubuntu
-    image: docker://quay.io/cybozu/ubuntu-dev:18.04
+    image: docker://quay.io/cybozu/ubuntu-debug:18.04
     readonly-rootfs: false
     exec: /bin/sleep
     args:
