--- a/testdata/cluster.yml
+++ b/testdata/cluster.yml
@@ -232,6 +232,10 @@ spec:
     name: common
     spec:
       folder: common-data
+  - kind: vvfat
+    name: local
+    spec:
+      folder: rack0-bird-data
   resources:
     cpu: "2"
     memory: 2G
@@ -254,6 +258,10 @@ spec:
     name: common
     spec:
       folder: common-data
+  - kind: vvfat
+    name: local
+    spec:
+      folder: rack0-bird-data
   resources:
     cpu: "2"
     memory: 2G
@@ -302,6 +310,10 @@ spec:
     name: common
     spec:
       folder: common-data
+  - kind: vvfat
+    name: local
+    spec:
+      folder: rack1-bird-data
   resources:
     cpu: "2"
     memory: 2G
@@ -324,6 +336,10 @@ spec:
     name: common
     spec:
       folder: common-data
+  - kind: vvfat
+    name: local
+    spec:
+      folder: rack1-bird-data
   resources:
     cpu: "2"
     memory: 2G
@@ -346,6 +362,10 @@ spec:
     name: common
     spec:
       folder: common-data
+  - kind: vvfat
+    name: local
+    spec:
+      folder: rack1-bird-data
   resources:
     cpu: "1"
     memory: 1G
@@ -368,6 +388,10 @@ spec:
     name: common
     spec:
       folder: common-data
+  - kind: vvfat
+    name: local
+    spec:
+      folder: rack1-bird-data
   resources:
     cpu: "1"
     memory: 1G
