--- a/testdata/cluster.yml
+++ b/testdata/cluster.yml
@@ -207,7 +207,7 @@ spec:
   resources:
     cpu: "2"
     memory: 2G
-  bios: uefi
+  bios: seabios
   smbios:
     serial: ba49d9a971c5a0344edfda5c8116745ea16fa4dd
 ---
@@ -225,7 +225,7 @@ spec:
   resources:
     cpu: "2"
     memory: 2G
-  bios: uefi
+  bios: seabios
   smbios:
     serial: e6abb04b4645a765faf91f97536ec64f9cecfb61
 ---
@@ -270,7 +270,7 @@ spec:
   resources:
     cpu: "2"
     memory: 2G
-  bios: uefi
+  bios: seabios
   smbios:
     serial: 4ae0771764376e0184274e24e0b18abd8fa5f285
 ---
@@ -288,7 +288,7 @@ spec:
   resources:
     cpu: "2"
     memory: 2G
-  bios: uefi
+  bios: seabios
   smbios:
     serial: aec899fb87747909c95a2decaa4f25899f07516e
 ---
@@ -306,7 +306,7 @@ spec:
   resources:
     cpu: "1"
     memory: 1G
-  bios: uefi
+  bios: seabios
   smbios:
     serial: 1145129a085ecf521ab524028302a6b4a4e49a00
 ---
@@ -324,7 +324,7 @@ spec:
   resources:
     cpu: "1"
     memory: 1G
-  bios: uefi
+  bios: seabios
   smbios:
     serial: 628c8c360d0113de66db14a225affcb85fb2a27f
 ---
