default is seabios

--- a/example.yml
+++ b/example.yml
@@ -40,11 +40,10 @@ type: cs
 spec:
   cpu: 2
   memory: 2G
-  bios: "seabios"
+  bios: "uefi"
 ---
 kind: Node
 type: ss
 spec:
   cpu: 1
   memory: 1G
-  bios: "seabios"
