[WIP] generate BMC network

--- a/testdata/cluster.yml
+++ b/testdata/cluster.yml
@@ -31,6 +31,14 @@ spec:
   use-nat: false
 ---
 kind: Network
+name: bmc
+spec:
+  type: bmc
+  use-nat: false
+  addresses:
+  - 10.72.16.1/24
+---
+kind: Network
 name: s1-to-r0-1
 spec:
   type: internal
@@ -403,6 +411,9 @@ spec:
   - network: core-to-s1
     addresses:
     - 10.0.2.1/31
+  - network: bmc
+    addresses:
+    - 10.72.16.2/24
   - network: s1-to-r0-1
     addresses:
     - 10.0.1.0/31
@@ -447,6 +458,9 @@ spec:
   - network: core-to-s2
     addresses:
     - 10.0.2.3/31
+  - network: bmc
+    addresses:
+    - 10.72.16.3/24
   - network: s2-to-r0-1
     addresses:
     - 10.0.1.8/31
