--- a/cmd/placemat-menu/public/templates/bird_spine.conf
+++ b/cmd/placemat-menu/public/templates/bird_spine.conf
@@ -4,6 +4,10 @@ log stderr all;
 protocol device {
     scan time 60;
 }
+protocol direct direct1 {
+    ipv4;
+    interface "{{$self.BMCInterface}}";
+}
 protocol bfd {
     interface "*" {
        min rx interval 400 ms;
