--- a/testdata/cluster.yml
+++ b/testdata/cluster.yml
@@ -90,6 +90,7 @@ name: r1-node2
 type: internal
 use-nat: false
 ---
+kind: Image
 name: ubuntu-cloud-image
 url: https://cloud-images.ubuntu.com/releases/16.04/release/ubuntu-16.04-server-cloudimg-amd64-disk1.img
 ---
