--- a/testdata/cluster.yml
+++ b/testdata/cluster.yml
@@ -468,9 +468,9 @@ apps:
   image: docker://quay.io/cybozu/dnsmasq:2.79
   readonly-rootfs: true
   args:
-  - --log-queries
-  - --log-dhcp
-  - --no-daemon
+  - --keep-in-foreground
+  - --pid-file
+  - --log-facility=-
   - --dhcp-relay
   - 10.69.0.65,10.69.0.195
   caps-retain:
@@ -518,9 +518,9 @@ apps:
   image: docker://quay.io/cybozu/dnsmasq:2.79
   readonly-rootfs: true
   args:
-  - --log-queries
-  - --log-dhcp
-  - --no-daemon
+  - --keep-in-foreground
+  - --pid-file
+  - --log-facility=-
   - --dhcp-relay
   - 10.69.0.129,10.69.0.195
   caps-retain:
@@ -568,9 +568,9 @@ apps:
   image: docker://quay.io/cybozu/dnsmasq:2.79
   readonly-rootfs: true
   args:
-  - --log-queries
-  - --log-dhcp
-  - --no-daemon
+  - --keep-in-foreground
+  - --pid-file
+  - --log-facility=-
   - --dhcp-relay
   - 10.69.1.1,10.69.0.3
   caps-retain:
@@ -618,9 +618,9 @@ apps:
   image: docker://quay.io/cybozu/dnsmasq:2.79
   readonly-rootfs: true
   args:
-  - --log-queries
-  - --log-dhcp
-  - --no-daemon
+  - --keep-in-foreground
+  - --pid-file
+  - --log-facility=-
   - --dhcp-relay
   - 10.69.1.65,10.69.0.3
   caps-retain:
