Fix boot hostname (ex. rack0-boot to boot-0) in docs

--- a/cmd/placemat-menu/public/templates/bird_rack-tor2.conf
+++ b/cmd/placemat-menu/public/templates/bird_rack-tor2.conf
@@ -51,7 +51,7 @@ template bgp bgpnode {
         };
     };
 }
-protocol bgp '{{$self.Name}}-boot' from bgpnode {
+protocol bgp 'boot-{{$rackIdx}}' from bgpnode {
     neighbor {{$self.BootNode.Node2Address.IP}} as {{$self.ASN}};
 }
 {{range $cs := $self.CSList -}}
