--- a/testdata/bird_rack0-tor2.conf
+++ b/testdata/bird_rack0-tor2.conf
@@ -56,7 +56,7 @@ template bgp bgpnode {
         };
     };
 }
-protocol bgp 'rack0-boot' from bgpnode {
+protocol bgp 'boot-0' from bgpnode {
     neighbor 10.69.0.131 as 64600;
 }
 protocol bgp 'rack0-cs1' from bgpnode {
