--- a/testdata/bird_rack1-tor2.conf
+++ b/testdata/bird_rack1-tor2.conf
@@ -56,7 +56,7 @@ template bgp bgpnode {
         };
     };
 }
-protocol bgp 'rack1-boot' from bgpnode {
+protocol bgp 'boot-1' from bgpnode {
     neighbor 10.69.1.67 as 64601;
 }
 protocol bgp 'rack1-cs1' from bgpnode {
