--- a/testdata/cluster.yml
+++ b/testdata/cluster.yml
@@ -94,6 +94,10 @@ kind: Image
 name: ubuntu-cloud-image
 url: https://cloud-images.ubuntu.com/releases/16.04/release/ubuntu-16.04-server-cloudimg-amd64-disk1.img
 ---
+kind: Image
+name: docker-image
+file: ./docker.img
+---
 kind: DataFolder
 name: core-data
 files:
@@ -178,6 +182,10 @@ volumes:
 - kind: raw
   name: data2
   size: 30G
+- kind: image
+  name: extra0
+  image: docker-image
+  copy-on-write: true
 cpu: 2
 memory: 2G
 uefi: true
@@ -196,6 +204,10 @@ volumes:
 - kind: raw
   name: data2
   size: 30G
+- kind: image
+  name: extra0
+  image: docker-image
+  copy-on-write: true
 cpu: 2
 memory: 2G
 uefi: true
@@ -236,6 +248,10 @@ volumes:
 - kind: raw
   name: data2
   size: 30G
+- kind: image
+  name: extra0
+  image: docker-image
+  copy-on-write: true
 cpu: 2
 memory: 2G
 uefi: true
@@ -254,6 +270,10 @@ volumes:
 - kind: raw
   name: data2
   size: 30G
+- kind: image
+  name: extra0
+  image: docker-image
+  copy-on-write: true
 cpu: 2
 memory: 2G
 uefi: true
@@ -272,6 +292,10 @@ volumes:
 - kind: raw
   name: data2
   size: 30G
+- kind: image
+  name: extra0
+  image: docker-image
+  copy-on-write: true
 cpu: 1
 memory: 1G
 smbios:
@@ -289,6 +313,10 @@ volumes:
 - kind: raw
   name: data2
   size: 30G
+- kind: image
+  name: extra0
+  image: docker-image
+  copy-on-write: true
 cpu: 1
 memory: 1G
 smbios:
