--- a/cmd/placemat-menu/public/templates/bird_spine.conf
+++ b/cmd/placemat-menu/public/templates/bird_spine.conf
@@ -45,6 +45,8 @@ protocol static myroutes {
     route {{.Args.Network.Exposed.Bastion}} via {{(index .Args.Core.SpineAddresses $spineIdx).IP}};
     # Ingress
     route {{.Args.Network.Exposed.Ingress}} via {{(index .Args.Core.SpineAddresses $spineIdx).IP}};
+    # Global
+    route {{.Args.Network.Exposed.Global}} via {{(index .Args.Core.SpineAddresses $spineIdx).IP}};
 }
 
 protocol bgp 'core' {
