--- a/testdata/bird_spine2.conf
+++ b/testdata/bird_spine2.conf
@@ -47,6 +47,8 @@ protocol static myroutes {
     route 10.72.48.0/26 via 10.0.2.2;
     # Ingress
     route 10.72.48.64/26 via 10.0.2.2;
+    # Global
+    route 172.17.0.0/24 via 10.0.2.2;
 }
 
 protocol bgp 'core' {
